# hipaa-bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  dockerhub.yml
src/hipaa_bridge/: __init__.py  cli.py  config.py  detectors.py  proxy.py  sanitizer.py  vault.py  watch.py  webui.py
src/hipaa_bridge/static/: index.html
tests/: test_detectors.py  test_sanitizer.py  test_vault.py  test_watch.py  test_webui.py
