[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hipaa-bridge"
version = "0.1.0"
description = "Local clinical text de-identification: strip PHI, replace with deterministic tokens, restore locally. Nothing sensitive leaves your machine."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ner = ["spacy>=3.7"]
dev = ["pytest>=8.0"]

[project.scripts]
hipaa-bridge = "hipaa_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hipaa_bridge = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
